# aeacus-desktop

./: .gitmodules  CMakeLists.txt
include/: daemon.h  reference.h  user.h
include/api/: command.h  message.h  request.h  token.h
include/crypto/: crypto.h
include/daemon/: daemon.h  socket_daemon.h
include/event/: command_event.h  listener.h  message_event.h
include/util/: InvalidArgumentException.h  argument.h  argument_parser.h  cline_argument_parser.h  http_request.h  timer.h
src/: daemon.cpp  main.cpp  user.cpp
src/api/: command.cpp  message.cpp  request.cpp
src/crypto/: crypto.cpp
src/daemon/: daemon.cpp  socket_daemon.cpp
src/event/: command_event.cpp  listener.cpp  message_event.cpp
src/util/: InvalidArgumentException.cpp  argument.cpp  base64.cpp  cline_argument_parser.cpp  http_request.cpp  timer.cpp
testSrc/: parser.cpp
